refactor: use toList() instead of Collectors.toList()